Change Razorpay keys to environment variables
Updated Razorpay keys to use environment variables for better security.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=PaymentService
 
-razorpay.key.id=[KEY_ID]
-razorpay.key.secret=[KEY_SECRET]
+# For testing add following key-value pairs in your intellij project configs
+razorpay.key.id=${RAZORPAY_KEY_ID}
+razorpay.key.secret=${RAZORPAY_KEY_SECRET}
 
 stripe.apiKey=${STRIPE_KEY}
